Common hibernate model for shapes (#11)
* Change architecture to based on common Shape class

* Refactor test part 1

* Changes for common shape model

* Test changes part 1

* Test changes part 2

* Test changes part 3 - handlers missing mock

* Keys in DTOs

* Test changes part 5 - refactor ShapeHandler

* Refactor Handlers

* Test changes part 6

* Logging Slf4j

* Test changes part 7

* Test changes part 8

* Clean up code

* TestRestTemplate in Integration tests