@@ -1,24 +1,23 @@
 package com.shape.shape_api.circle.v2;
 
-import com.shape.shape_api.circle.CircleRepository;
-import com.shape.shape_api.circle.v2.dto.CircleDTOv2;
+import com.shape.shape_api.circle.v2.dto.CircleDtoInV2;
 import com.shape.shape_api.model.Circle;
 import com.shape.shape_api.shape.ShapeHandler;
+import com.shape.shape_api.shape.ShapeRepository;
 import io.swagger.v3.oas.annotations.Hidden;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Hidden
 @Component
-public class CircleHandlerV2 implements ShapeHandler<CircleDTOv2, CircleDTOv2> {
+public class CircleHandlerV2 implements ShapeHandler<CircleDtoInV2, Circle> {
 
-    private final CircleRepository circleRepository;
+    private final ShapeRepository shapeRepository;
     private final CircleV2Mapper circleV2Mapper;
 
-    public CircleHandlerV2(CircleRepository circleRepository, CircleV2Mapper circleV2Mapper) {
-        this.circleRepository = circleRepository;
+    public CircleHandlerV2(ShapeRepository shapeRepository, CircleV2Mapper circleV2Mapper) {
+        this.shapeRepository = shapeRepository;
         this.circleV2Mapper = circleV2Mapper;
     }
 
@@ -28,16 +27,15 @@ public class CircleHandlerV2 implements ShapeHandler<CircleDTOv2, CircleDTOv2> {
     }
 
     @Override
-    public List<CircleDTOv2> getAllShapes() {
-        return circleRepository.findAll().stream()
-                .map(circleV2Mapper::mapToDto)
-                .collect(Collectors.toList());
+    public List<Circle> getAllShapes() {
+        return shapeRepository.findAllByShapeType(Circle.class).stream()
+                .map(shape -> (Circle) shape)
+                .toList();
     }
 
     @Override
-    public CircleDTOv2 createShape(CircleDTOv2 circleDTOv2) {
-        Circle circle = circleV2Mapper.mapToEntity(circleDTOv2);
-        Circle savedCircle = circleRepository.save(circle);
-        return circleV2Mapper.mapToDto(savedCircle);
+    public Circle createShape(CircleDtoInV2 circleDtoInV2) {
+        Circle entity = circleV2Mapper.mapToEntity(circleDtoInV2);
+        return shapeRepository.save(entity);
     }
 }
