@@ -1,24 +1,23 @@
 package com.shape.shape_api.rectangle.v1;
 
 import com.shape.shape_api.model.Rectangle;
-import com.shape.shape_api.rectangle.RectangleRepository;
-import com.shape.shape_api.rectangle.v1.dto.RectangleDTOv1;
+import com.shape.shape_api.rectangle.v1.dto.RectangleDtoInV1;
 import com.shape.shape_api.shape.ShapeHandler;
+import com.shape.shape_api.shape.ShapeRepository;
 import io.swagger.v3.oas.annotations.Hidden;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Hidden
 @Component
-public class RectangleHandlerV1 implements ShapeHandler<RectangleDTOv1, RectangleDTOv1> {
+public class RectangleHandlerV1 implements ShapeHandler<RectangleDtoInV1, Rectangle> {
 
-    private final RectangleRepository rectangleRepository;
+    private final ShapeRepository shapeRepository;
     private final RectangleV1Mapper rectangleV1Mapper;
 
-    public RectangleHandlerV1(RectangleRepository rectangleRepository, RectangleV1Mapper rectangleV1Mapper) {
-        this.rectangleRepository = rectangleRepository;
+    public RectangleHandlerV1(ShapeRepository shapeRepository, RectangleV1Mapper rectangleV1Mapper) {
+        this.shapeRepository = shapeRepository;
         this.rectangleV1Mapper = rectangleV1Mapper;
     }
 
@@ -28,16 +27,15 @@ public class RectangleHandlerV1 implements ShapeHandler<RectangleDTOv1, Rectangl
     }
 
     @Override
-    public List<RectangleDTOv1> getAllShapes() {
-        return rectangleRepository.findAll().stream()
-                .map(rectangleV1Mapper::mapToDto)
-                .collect(Collectors.toList());
+    public List<Rectangle> getAllShapes() {
+        return shapeRepository.findAllByShapeType(Rectangle.class).stream()
+                .map(shape -> (Rectangle) shape)
+                .toList();
     }
 
     @Override
-    public RectangleDTOv1 createShape(RectangleDTOv1 rectangleDTOv1) {
-        Rectangle rectangle = rectangleV1Mapper.mapToEntity(rectangleDTOv1);
-        Rectangle savedRectangle = rectangleRepository.save(rectangle);
-        return rectangleV1Mapper.mapToDto(savedRectangle);
+    public Rectangle createShape(RectangleDtoInV1 dto) {
+        Rectangle entity = rectangleV1Mapper.mapToEntity(dto);
+        return shapeRepository.save(entity);
     }
 }
